--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link href="https://fonts.googleapis.com/css?family=Noto+Serif|Open+Sans|Carter+One|Rubik:300,400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+    <!--
+    <link href="https://fonts.googleapis.com/css?family=Carter+One|Noto+Serif|Open+Sans|Rubik:300,400,700" rel="stylesheet">
+    -->
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
       name="viewport"
