--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,13 @@
     <!--
     <link href="https://fonts.googleapis.com/css?family=Carter+One|Noto+Serif|Open+Sans|Rubik:300,400,700" rel="stylesheet">
     -->
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon-32.png" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="description" content="A podcast player built by Cheryl Zeng">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -21,7 +22,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" role="main"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
