--- a/public/index.html
+++ b/public/index.html
@@ -1,37 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135232789-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-135232789-1');
+    </script>
     <meta charset="utf-8" />
-    <!--
-    <link href="https://fonts.googleapis.com/css?family=Carter+One|Noto+Serif|Open+Sans|Rubik:300,400,700" rel="stylesheet">
-    -->
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon-32.png" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#ffffff" />
-    <meta name="description" content="A podcast player built by Cheryl Zeng">
+    <meta name="description" content="A podcast player built by Cheryl Zeng" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon-32.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-    -->
     <title>CastAlleys</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" role="main"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
