--- a/public/index.html
+++ b/public/index.html
@@ -4,19 +4,22 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135232789-1"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+function gtag() {
+  dataLayer.push(arguments);
+}
+gtag('js', new Date());
 
-      gtag('config', 'UA-135232789-1');
-    </script>
+gtag('config', 'UA-135232789-1');
+</script>
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#ffffff" />
-    <meta name="description" content="A podcast player built by Cheryl Zeng" />
+    <meta name="description" content="A simple and clean podcast player." />
+    <meta name="author" content="Cheryl Zeng" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon-32.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>CastAlleys</title>
